--- a/debian/nvidia-driver.install.in
+++ b/debian/nvidia-driver.install.in
@@ -2,3 +2,5 @@ nvidia-bug-report.sh	usr/lib/#PRIVATE#/
 nvidia-debugdump	usr/bin/
 nvidia-persistenced	usr/bin/
 nvidia-application-profiles-#VERSION#-rc	usr/share/nvidia/
+monitoring.conf		usr/share/nvidia/
+pci.ids			usr/share/nvidia/
