--- a/debian/control
+++ b/debian/control
@@ -428,6 +428,10 @@ Provides:
  libcuda-5.0-1-i386 [i386],
  libcuda-5.5-1,
  libcuda-5.5-1-i386 [i386],
+ libcuda-6.0-1,
+ libcuda-6.0-1-i386 [i386],
+ libcuda-6.5-1,
+ libcuda-6.5-1-i386 [i386],
 Homepage: http://www.nvidia.com/CUDA
 Description: NVIDIA CUDA runtime library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
