--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -191,11 +191,7 @@ fi
 	then
 		if [[ -n ${VERSIONS[999]} ]]; then
 			if [[ -n ${VERSIONS[304]} ]]; then
-				if [[ -n ${VERSIONS[173]} ]]; then
-					echo "Your card is supported by the default drivers and legacy driver series 304 and legacy driver series 173.14."
-				else
-					echo "Your card is supported by the default drivers and legacy driver series 304."
-				fi
+				echo "Your card is supported by the default drivers and legacy driver series 304."
 			else
 				echo "Your card is supported by the default drivers."
 			fi
@@ -204,8 +200,7 @@ fi
 			echo "Your card is only supported up to the 304 legacy drivers series."
 			PACKAGE="nvidia-legacy-304xx-driver"
 		elif [[ -n ${VERSIONS[173]} ]]; then
-			echo "Your card is only supported up to the 173.14 legacy drivers series."
-			PACKAGE="nvidia-legacy-173xx-driver"
+			echo "Uh oh. Your card is only supported by the 173.14 legacy drivers series, which is not in any current Debian suite."
 		elif [[ -n ${VERSIONS[96]} ]]; then
 			echo "Uh oh. Your card is only supported by the 96.43 legacy drivers series, which is not in any current Debian suite."
 		else
