no, better put this into libgl1-nvidia-glx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4951 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -108,6 +108,8 @@ Package: libgl1-nvidia-glx
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
+ debconf (>= 0.5) | debconf-2.0,
+ pciutils,
  nvidia-installer-cleanup,
  ${misc:Pre-Depends}
 Depends:
