import the debconf translations from fglrx-driver
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4953 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends:
  dkms,
  libxext6,
  quilt,
+ po-debconf,
 Standards-Version: 3.9.6
 Homepage: http://www.nvidia.com
 XS-Autobuild: yes
