update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@4959 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -3,7 +3,7 @@
 embedded-library usr/lib*/libcuda.so.#VERSION#: zlib
 [!armhf]: shlib-with-executable-stack
 [i386]: shlib-with-non-pic-code
-[i386]: spelling-error-in-binary
+spelling-error-in-binary
 unstripped-binary-or-object
 hardening-no-fortify-functions
 hardening-no-relro
