--- a/debian/control
+++ b/debian/control
@@ -436,12 +436,13 @@ Provides:
  libcuda-6.5-1,
  libcuda-6.5-1-i386 [i386],
 Homepage: http://www.nvidia.com/CUDA
-Description: NVIDIA CUDA runtime library
+Description: NVIDIA CUDA Driver Library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
  .
- This package contains the driver specific runtime library.
+ This package contains the CUDA Driver API library for low-level CUDA
+ programming.
  .
  Supported NVIDIA devices include GPUs starting from GeForce 8 and Quadro FX
  series, as well as the Tesla computing processors.
@@ -483,6 +484,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
+ libcuda1 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA CUDA Video Decoder runtime library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -500,6 +502,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
+ libcuda1 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVENC Video Encoding runtime library
  The NVENC Video Encoding library provides an interface to video encoder
@@ -513,6 +516,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
+ libcuda1 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA OpenGL-based Inband Frame Readback runtime library
  The NVIDIA OpenGL-based Inband Frame Readback (NvIFROpenGL) library provides
@@ -528,6 +532,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
+ libcuda1 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA OpenGL-based Framebuffer Capture runtime library
  The NVIDIA OpenGL-based Framebuffer Capture (NvFBCOpenGL) library provides
@@ -578,6 +583,7 @@ Pre-Depends:
 Depends:
  nvidia-opencl-common (= ${binary:Version}),
  ocl-icd-libopencl1 | nvidia-libopencl1 | libopencl1,
+ libcuda1 (= ${binary:Version}),
  libnvidia-compiler (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Enhances:
