--- a/debian/detect/nvidia-detect.in
+++ b/debian/detect/nvidia-detect.in
@@ -86,6 +86,11 @@ then
 	VERSIONS[173]=173.14
 fi
 
+if grep -q -i $NVGA $IDLISTDIR/nvidia-legacy-304xx.ids 2>/dev/null
+then
+	VERSIONS[304]=304.123
+fi
+
 if grep -q -i $NVGA $IDLISTDIR/nvidia-195.ids 2>/dev/null
 then
 	VERSIONS[195]=195.36.24
@@ -94,11 +99,6 @@ fi
 if grep -q -i $NVGA $IDLISTDIR/nvidia-295.ids 2>/dev/null
 then
 	VERSIONS[295]=295.59
-fi
-
-if grep -q -i $NVGA $IDLISTDIR/nvidia-304.ids 2>/dev/null
-then
-	VERSIONS[304]=304.88
 fi
 
 if grep -q -i $NVGA $IDLISTDIR/nvidia-343.ids 2>/dev/null
