--- a/debian/nvidia-vdpau-driver.links.in
+++ b/debian/nvidia-vdpau-driver.links.in
@@ -1,1 +1,1 @@
-#LIBDIR#/vdpau/libvdpau_nvidia.so.#VERSION#	#LIBDIR#/vdpau/libvdpau_nvidia.so.1
+#LIBDIR#/#PRIVATE#/libvdpau_nvidia.so.#VERSION#	#LIBDIR#/#PRIVATE#/libvdpau_nvidia.so.1
