--- a/debian/libnvidia-fbc1.links.in
+++ b/debian/libnvidia-fbc1.links.in
@@ -1,2 +1,2 @@
-#LIBDIR#/libnvidia-fbc.so.#VERSION#	#LIBDIR#/libnvidia-fbc.so.1
-#LIBDIR#/libnvidia-fbc.so.1		#LIBDIR#/libnvidia-fbc.so
+#LIBDIR#/#PRIVATE#/libnvidia-fbc.so.#VERSION#	#LIBDIR#/#PRIVATE#/libnvidia-fbc.so.1
+#LIBDIR#/#PRIVATE#/libnvidia-fbc.so.1		#LIBDIR#/#PRIVATE#/libnvidia-fbc.so
