--- a/debian/libnvidia-ifr1.links.in
+++ b/debian/libnvidia-ifr1.links.in
@@ -1,2 +1,2 @@
-#LIBDIR#/libnvidia-ifr.so.#VERSION#	#LIBDIR#/libnvidia-ifr.so.1
-#LIBDIR#/libnvidia-ifr.so.1		#LIBDIR#/libnvidia-ifr.so
+#LIBDIR#/#PRIVATE#/libnvidia-ifr.so.#VERSION#	#LIBDIR#/#PRIVATE#/libnvidia-ifr.so.1
+#LIBDIR#/#PRIVATE#/libnvidia-ifr.so.1		#LIBDIR#/#PRIVATE#/libnvidia-ifr.so
