--- a/debian/libnvidia-encode1.links.in
+++ b/debian/libnvidia-encode1.links.in
@@ -1,2 +1,2 @@
-#LIBDIR#/libnvidia-encode.so.#VERSION#	#LIBDIR#/libnvidia-encode.so.1
-#LIBDIR#/libnvidia-encode.so.1		#LIBDIR#/libnvidia-encode.so
+#LIBDIR#/#PRIVATE#/libnvidia-encode.so.#VERSION#	#LIBDIR#/#PRIVATE#/libnvidia-encode.so.1
+#LIBDIR#/#PRIVATE#/libnvidia-encode.so.1		#LIBDIR#/#PRIVATE#/libnvidia-encode.so
