--- a/debian/control
+++ b/debian/control
@@ -418,6 +418,7 @@ Description: NVIDIA CUDA Multi Process Service (MPS)
  has compute capability SM 3.5 or higher.
  Pre-CUDA 4.0 APIs are not supported under CUDA MPS.
 
+#Package: ${libcuda1}
 Package: libcuda1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
@@ -429,7 +430,7 @@ Depends:
 Recommends:
  ${nvidia:kmod:binary},
  nvidia-smi,
- libcuda1-i386 [amd64],
+ ${libcuda1}-i386 [amd64],
 Suggests:
  nvidia-cuda-mps,
  ${nvidia:kmod:source},
@@ -461,15 +462,16 @@ Description: NVIDIA CUDA Driver Library
  .
  ${nvidia:kmod:Description}
 
+#Package: ${libcuda1}-i386
 Package: libcuda1-i386
 Architecture: i386
 Multi-Arch: foreign
 Depends:
- libcuda1,
+ ${libcuda1},
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA CUDA 32-bit runtime library${nvidia:LegacyDesc}
  This metapackage helps the automatic installation of the 32-bit NVIDIA CUDA
- library when installing libcuda1 on amd64 with foreign architecture i386
+ library when installing ${libcuda1} on amd64 with foreign architecture i386
  enabled.
 
 #Package: lib${nvidia}-compiler
@@ -498,7 +500,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
- libcuda1 (= ${binary:Version}),
+ ${libcuda1} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA CUDA Video Decoder runtime library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
@@ -517,7 +519,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
- libcuda1 (= ${binary:Version}),
+ ${libcuda1} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVENC Video Encoding runtime library
  The NVENC Video Encoding library provides an interface to video encoder
@@ -532,7 +534,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
- libcuda1 (= ${binary:Version}),
+ ${libcuda1} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA OpenGL-based Inband Frame Readback runtime library
  The NVIDIA OpenGL-based Inband Frame Readback (NvIFROpenGL) library provides
@@ -549,7 +551,7 @@ Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
- libcuda1 (= ${binary:Version}),
+ ${libcuda1} (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA OpenGL-based Framebuffer Capture runtime library
  The NVIDIA OpenGL-based Framebuffer Capture (NvFBCOpenGL) library provides
@@ -601,7 +603,7 @@ Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  nvidia-opencl-common,
  ocl-icd-libopencl1 | nvidia-libopencl1 | libopencl1,
- libcuda1 (= ${binary:Version}),
+ ${libcuda1} (= ${binary:Version}),
  lib${nvidia}-compiler (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Enhances:
