recommend libegl1-nvidia and suggest libgles[12]-nvidia
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5060 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -37,8 +37,11 @@ Depends:
 Recommends:
  ${nvidia-settings},
  libgl1-${nvidia}-glx-i386 [amd64],
+ libegl1-${nvidia} (= ${binary:Version}),
 Suggests:
  ${nvidia:kmod:source},
+ libgles1-${nvidia} (= ${binary:Version}),
+ libgles2-${nvidia} (= ${binary:Version}),
 Provides:
  nvidia-glx-any,
 Breaks:
