--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,6 @@ WATCH_VERSION		?= $(NVIDIA_LEGACY)
 WATCH_PATTERN		?=
 XORG_ABI_LIST		?=
 XORG_BOUND		?=
-MULTIARCH		?=
 BACKPORT		?=
 NVIDIA_SETTINGS		?= nvidia-settings$(legacy)
 NVIDIA_ALTERNATIVE	?= nvidia$(legacy)-alternative
@@ -37,7 +36,7 @@ ARCH_LIST		?= i386 amd64
 ARCH_DEPS_i386		?= amd64
 
 # system libdir
-libdir			 = usr/lib$(if $(MULTIARCH),/$(DEB_HOST_MULTIARCH))
+libdir			?= usr/lib/$(DEB_HOST_MULTIARCH)
 # nvidia version specific directory below $(libdir)
 nvidia_private		 = nvidia/$(current)
 
