--- a/debian/libgl1-nvidia-glx.preinst.in
+++ b/debian/libgl1-nvidia-glx.preinst.in
@@ -169,6 +169,11 @@ check_for_unsupported_gpus()
 
 	UNSUPPORTED="$(for dev in $UNSUPPORTED_DEVICES ; do lspci -nn -s "$dev" ; done)"
 
+	db_subst nvidia-driver/install-even-if-unsupported-gpu-exists vendor "NVIDIA"
+	db_subst nvidia-driver/install-even-if-unsupported-gpu-exists driver "#NVIDIA#-driver"
+	db_subst nvidia-driver/install-even-if-unsupported-gpu-exists legacy_driver "$LEGACY_DRIVER"
+	db_subst nvidia-driver/install-even-if-unsupported-gpu-exists free_name "Nouveau"
+	db_subst nvidia-driver/install-even-if-unsupported-gpu-exists free_driver "xserver-xorg-video-nouveau"
 	db_subst nvidia-driver/install-even-if-unsupported-gpu-exists unsupported-device "$UNSUPPORTED"
 
 	# ensure the question is asked again unless it was accepted previously for the same $LEGACY_DRIVER
