support switching nvidia-driver-bin via nvidia-alternative
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/343@5120 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-driver-bin.install.armhf.in
+++ b/debian/nvidia-driver-bin.install.armhf.in
@@ -1,5 +1,5 @@
 nvidia-bug-report.sh	usr/lib/#PRIVATE#/
-nvidia-debugdump	usr/bin/
+nvidia-debugdump	usr/lib/#PRIVATE#/
 nvidia-persistenced	usr/bin/
 nvidia-application-profiles-#VERSION#-rc	usr/share/nvidia/
 nvidia-application-profiles-#VERSION#-key-documentation	usr/share/nvidia/
