--- a/debian/nvidia-driver-bin.install.in
+++ b/debian/nvidia-driver-bin.install.in
@@ -1,7 +1,7 @@
 nvidia-bug-report.sh	usr/lib/#PRIVATE#/
-nvidia-debugdump	usr/bin/
+nvidia-debugdump	usr/lib/#PRIVATE#/
 nvidia-persistenced	usr/bin/
 nvidia-application-profiles-#VERSION#-rc	usr/share/nvidia/
 nvidia-application-profiles-#VERSION#-key-documentation	usr/share/nvidia/
-monitoring.conf		usr/share/nvidia/
+monitoring.conf		usr/lib/#PRIVATE#/
 pci.ids			usr/share/nvidia/
