--- a/debian/nvidia-driver-bin.lintian-overrides.in
+++ b/debian/nvidia-driver-bin.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-embedded-library usr/bin/nvidia-debugdump: zlib
-hardening-no-relro usr/bin/nvidia-debugdump
+embedded-library usr/lib/#PRIVATE#/nvidia-debugdump: zlib
+hardening-no-relro usr/lib/#PRIVATE#/nvidia-debugdump
 hardening-no-relro usr/bin/nvidia-persistenced
 hardening-no-fortify-functions
