--- a/debian/nvidia-driver.install.in
+++ b/debian/nvidia-driver.install.in
@@ -4,4 +4,4 @@ nvidia-persistenced	usr/bin/
 nvidia-application-profiles-#VERSION#-rc	usr/share/nvidia/
 nvidia-application-profiles-#VERSION#-key-documentation	usr/share/nvidia/
 #!armhf#monitoring.conf		usr/share/nvidia/
-#!armhf#pci.ids			usr/share/nvidia/
+#!armhf##!legacy#pci.ids	usr/share/nvidia/
