support switching nvidia-driver-bin via nvidia-alternative
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5132 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-driver-bin.lintian-overrides.in
+++ b/debian/nvidia-driver-bin.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-embedded-library usr/bin/nvidia-debugdump: zlib
-hardening-no-relro usr/bin/nvidia-debugdump
+embedded-library usr/lib/#PRIVATE#/nvidia-debugdump: zlib
+hardening-no-relro usr/lib/#PRIVATE#/nvidia-debugdump
 hardening-no-fortify-functions
