--- a/debian/control
+++ b/debian/control
@@ -67,7 +67,7 @@ Package: nvidia-driver-bin
 Section: non-free/x11
 Architecture: i386 amd64 armhf
 Depends:
- ${nvidia-alternative} (= ${binary:Version}),
+ ${nvidia-alternative},
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  ${nvidia}-driver,
@@ -276,6 +276,7 @@ Conflicts:
 Breaks:
  nvidia-settings (<< 319.49),
  nvidia-settings-legacy-173xx (<< 173.14.37),
+ nvidia-driver (<< 340.46-4~),
  nvidia-vdpau-driver (<< 340.46-2~),
  libcuda1 (<< 340.46-2~),
  nvidia-opencl-icd (<< 340.46-2~),
