--- a/debian/nvidia-driver-bin.install.in
+++ b/debian/nvidia-driver-bin.install.in
@@ -1,6 +1,6 @@
-nvidia-bug-report.sh	usr/lib/#PRIVATE#/
-nvidia-debugdump	usr/bin/
+nvidia-bug-report.sh		usr/lib/#PRIVATE#/
+nvidia-debugdump		usr/lib/#PRIVATE#/
 nvidia-application-profiles-#VERSION#-rc	usr/share/nvidia/
 nvidia-application-profiles-#VERSION#-key-documentation	usr/share/nvidia/
-#!armhf#monitoring.conf		usr/share/nvidia/
+#!armhf#monitoring.conf		usr/lib/#PRIVATE#/
 #!armhf##!legacy#pci.ids	usr/share/nvidia/
