n-a: ship /usr/share/nvidia
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5151 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-alternative.lintian-overrides.in
+++ b/debian/nvidia-alternative.lintian-overrides.in
@@ -5,3 +5,4 @@ package-contains-empty-directory usr/lib/#PRIVATE#/
 package-contains-empty-directory #LIBDIR#/vdpau/
 package-contains-empty-directory usr/share/applications/
 package-contains-empty-directory usr/share/man/man1/
+package-contains-empty-directory usr/share/nvidia/
