--- a/debian/control
+++ b/debian/control
@@ -314,7 +314,7 @@ Depends:
  ${nvidia-alternative}--kmod-alias,
  ${misc:Depends}
 Recommends:
- ${nvidia}-driver (>= ${nvidia:Version}),
+ ${nvidia}-driver (>= ${nvidia:Version}) | ${libcuda1} (>= ${nvidia:Version}),
 Provides:
  ${nvidia}-kernel-${nvidia:Version}${nvidia:Perfkit},
 Description: NVIDIA binary kernel module DKMS source${nvidia:LegacyDesc}
