update symbols control files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/346@5176 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libnvidia-compiler.symbols.in
+++ b/debian/libnvidia-compiler.symbols.in
@@ -1,5 +1,10 @@
 libnvidia-compiler.so.#VERSION# #PACKAGE# #MINVER#
+ NvCliCompileBitcode@Base 346
  NvCliCompileLogFree@Base 256
  NvCliCompileProgram@Base 256
+ NvCliCompileSource@Base 346
  NvCliCompiledProgramFree@Base 256
+ NvCliFreeBuffer@Base 346
+ NvCliGetBufferData@Base 346
+ NvCliLinkBitcode@Base 346
  nvvmCompilerProperty@Base 280
