use reproducible file order inside nvidia-kernel.tar.xz
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@5266 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -225,9 +225,12 @@ build-kernel-source-tree: install-into-tmp
 		xargs -0r touch --no-dereference --date='$(BUILD_DATE)'
 
 	# Build the tarball.
-	tar cfJ $(module_txz) \
+	(cd $(module_source)/../.. && find modules --print0) | \
+	  LC_ALL=C sort -z | \
+	  tar cfJ $(module_txz) \
 	    --owner=root --group=src -C $(module_source)/../.. \
-	    --exclude '*.in' --exclude '.svn' modules
+	    --exclude '*.in' --exclude '.svn' \
+	    --null -T - --no-recursion
 	tar tfvJ $(module_txz)
 
 build-kernel-dkms-tree: build-kernel-source-tree
